Created a dark/light masking system that currently works perfectly for 1 light source, even with multiple light sources, the issues arise when 2 light sources intersect, leaving the intersection to become faded black